[gd_scene load_steps=10 format=2]

[ext_resource path="res://theme/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://script/game_over_panel.gd" type="Script" id=2]
[ext_resource path="res://script/line_edit.gd" type="Script" id=3]
[ext_resource path="res://theme/fonts/Boku2-Regular.otf" type="DynamicFontData" id=5]
[ext_resource path="res://theme/fonts/AnonymousPro-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 640, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fold"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 640, 360 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "unfold"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 640, 360 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )
fallback/0 = ExtResource( 5 )

[node name="GameOver" type="Control"]
margin_left = 640.0
margin_right = 1920.0
margin_bottom = 720.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fold" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/fold = SubResource( 3 )
anims/unfold = SubResource( 4 )

[node name="BackGround" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
color = Color( 0.317647, 0.454902, 1, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -178.5
margin_top = 128.5
margin_right = 178.5
margin_bottom = 175.5
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="HBox"]
margin_right = 163.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "NewGame"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="HBox"]
margin_left = 193.0
margin_right = 357.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Result" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -279.0
margin_top = -112.0
margin_right = 280.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox2" type="HBoxContainer" parent="."]
margin_left = 360.0
margin_top = 394.0
margin_right = 919.0
margin_bottom = 447.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBox2"]
margin_top = 5.0
margin_right = 79.0
margin_bottom = 48.0
size_flags_horizontal = 3
text = "Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="HBox2"]
margin_left = 84.0
margin_right = 334.0
margin_bottom = 53.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 3
caret_blink = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="HBox2"]
margin_left = 339.0
margin_right = 559.0
margin_bottom = 53.0
rect_min_size = Vector2( 220, 0 )
size_flags_horizontal = 3
text = "SubmitScore"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="animation_finished" from="Fold" to="." method="_on_Fold_animation_finished"]
[connection signal="animation_started" from="Fold" to="." method="_on_Fold_animation_started"]
[connection signal="pressed" from="HBox/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="HBox/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="HBox2/Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
